added game mode with treats

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="model/lamp.js"></script>
   <script src="model/ray.js"></script>
   <script src="model/wall.js"></script>
+  <script src="model/treat.js"></script>
   <script src="sketch.js"></script>
 </head>
 
